Fixed Readability of the hero text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,13 +108,17 @@ nav ul li a:active {
 }
 
 .intro-text {
-    color: #fff;
+    color: #F28507;
     width: 40vw;
     margin-top: 20vh;
 }
 
 .intro-text .title {
     margin-bottom: 30px;
+}
+
+.subtitle{
+    color: #F28507;
 }
 
 
